Debugger: Improve DAP launch to prevent starting without a target

Currently, trying to launch a DAP session (e.g., Python) with an empty
executable path fails with an unhelpful error from the debug adapter,
after temporarily enabling and then disabling the UI.

This patch introduces two changes to create a better user experience:

1.  In ConfigView::currentDAPTarget, if the executable path is empty,
    a warning dialog is now shown to the user instructing them to set
    the target path. The configuration is then invalidated to prevent
    the launch from proceeding.

2.  In KatePluginGDBView::slotDebug, a check is added to ensure the
    configuration is valid before any debugger actions are taken. This
    prevents multiple warning dialogs and cleanly aborts the launch.

This makes the behavior more intuitive and guides the user to the
correct configuration step.

BUG: 505521

Closes #505521